# django-permanent

./: .gitignore  CHANGES.rst  Makefile  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
django_permanent/: deletion.py  managers.py  models.py  query.py
tests/: settings.py  test_cases.py
tests/test_app/: models.py
