[project]
name = "django-permanent"
version = "5.0.0"
description = "Yet another approach to provide soft (logical) delete or masking (thrashing) django models instead of deleting them physically from db."
authors = [
    { name = "Mikhail Antonov", email = "atin65536@gmail.com" },
    { name = "william chu", email = "william.chu@uptickhq.com" },
]
requires-python = "~=3.10"
readme = "README.rst"
dependencies = [
    "django==5.2.7",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "django-stubs==5.2.6",
    "ruff==0.13.3",
    "pytest==8.4.2",
    "pytest-coverage==0.0",
    "pytest-django==4.11.1",
    "build==1.3.0"
]

[tool.hatch.build.targets.sdist]
include = ["django_permanent"]

[tool.hatch.build.targets.wheel]
include = ["django_permanent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "C90", # Mccabe complexity
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "DTZ", # Enforce good datetime
    "BLE", # Blind exceptions
    "I",   # ISort
]

ignore = [
    "E501", # Ruff formats the lines
    "D202", # NoBlankLineAfterFunction
    "S101", # Use of `assert` detected
]



[tool.ruff.format]
exclude = ["**/migrations/**", "**/urls.py"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "tests.py test_*.py *_tests.py"
